--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,6 +36,10 @@ assetic:
     bundles:        [ ]
     #java: /usr/bin/java
     filters:
+        less:
+            node: /usr//bin/node
+            node_paths: [/usr/lib/node_modules]
+            apply_to: "\.less$"
         cssrewrite: ~
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
@@ -70,3 +74,6 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+braincrafted_bootstrap:
+    less_filter: less
